<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Général -->
    <string name="app_name">Top UV</string>

    <!-- Menu -->
    <string name="action_refresh">Rafraichir</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Chercher Uv</string>
    <string name="action_topuv">Classement</string>

    <!-- Activity title -->
    <string name="title_activity_login">IDENTIFICATION</string>
    <string name="title_activity_uv_comment">Poster votre commentaire</string>
    <string name="title_activity_menu">Liste d\'UVs</string>
    <string name="title_activity_uv">Fiche complète de l\'UV</string>
    <string name="title_activity_search">Recherche d\'UV</string>
    <string name="title_activity_search_result">Recherche avancée</string>
    <string name="title_activity_top_uv">Classement</string>
    <string name="title_activity_custom">Custom</string>
    <string name="title_activity_registration">S\'enregistrer</string>

    <!-- Login -->
    <string name="login">Identifiant:</string>
    <string name="password">Mot de passe:</string>
    <string name="connect">SE CONNECTER</string>
    <string name="button_cancel">EFFACER</string>
    <string name="login_required">Identifiant requis</string>
    <string name="password_required">Mot de passe requis</string>
    <string name="connexion_error">Mauvaise combinaison login/mot de passe</string>
    <string name="connexion_success">Connexion réussie</string>
    <string name="logo_utt">Logo de l\'UTT</string>
    <string name="no_account">Pas de compte ? Enregistrez-vous !</string>
    
    <!-- Registration -->
    <string name="already_account">Déjà un compte ? Connectez-vous !</string>
    <string name="registration">ENREGISTREMENT</string>
    <string name="first_name">Prénom :</string>
    <string name="last_name">Nom :</string>
    <string name="email">Email :</string>
    <string name="register">S\'enregistrer</string>
    <string name="first_name_required">Prénom requis</string>
    <string name="last_name_required">Nom requis</string>
    <string name="email_required">Email requis</string>
    <string name="login_already_register">Identifiant déjà pris !</string>
    <string name="register_confirm">Enregistrement confirmé</string>
    <string name="register_error">Erreur, veuillez réessayer</string>

    <!-- Menu -->
    <string name="no_uvs">Aucune UV présente. Veuillez cliquer sur l\'icône rafraichir !</string>

    <!-- Uv description -->
    <string name="uv_description_title">Description de l\'UV :</string>
    <string name="credit_uv_title">Nombre de crédits ECTS pour cette UV :</string>
    <string name="note_uv">Note moyenne de l\'UV :</string>
    <string name="add_comment">Ajouter une note</string>
    <string name="all_comments">Commentaires et notes des étudiants :</string>
    <string name="no_comments">Aucun commentaire, soyez le premier !</string>

    <!-- Uv Comment -->
    <string name="note_title">Votre note concernant l\'UV</string>
    <string name="comment_title">Votre commentaire concernant l\'UV :</string>
    <string name="confirm_comment">Envoyer votre note</string>
    <string name="comment_not_sent">Votre commentaire n\'a pu être envoyé</string>
    <string name="comment_already_sent">Vous avez déjà noté cette Uv</string>
    <string name="comment_required">Commentaire requis</string>
    <string name="comment_length">Un petit effort !</string>
    <string name="comment_sent">Commentaire envoyé, merci !</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="dialog_title">Vous êtes sur ?</string>
    <string name="dialog_message">Vous ne pourrez plus éditer votre message !</string>
    <string name="note_from_user_to_ratingBar_0">0 : Tout est à refaire !</string>
    <string name="note_from_user_to_ratingBar_1">1 : Ca passe tout juste</string>
    <string name="note_from_user_to_ratingBar_2">2 : Pas si mal</string>
    <string name="note_from_user_to_ratingBar_3">3 : Dans la moyenne</string>
    <string name="note_from_user_to_ratingBar_4">4 : Très bonne UV</string>
    <string name="note_from_user_to_ratingBar_5">5 : Amazing !</string>

    <!-- ViewPager Title page (UV category) -->
    <string name="title_section0">CS</string>
    <string name="title_section1">TM</string>
    <string name="title_section2">EC</string>
    <string name="title_section3">ME</string>
    <string name="title_section4">CT</string>

    <!-- TopUv -->
    <string name="topuv_top">Top</string>
    <string name="topuv_flop">Flop</string>

    <!-- Search -->
    <string name="search_method1">Recherche de l\'UV par son code :</string>
    <string name="search_method2">Recherche de l\'UV par d\'autres critères :</string>
    <string name="search_categorie_uv_title">Veuillez choisir la catégorie de l\'UV (optionnel) :</string>
    <string name="search_code_uv_title">Code de l\'UV :</string>
    <string name="search_description_uv_title">Veuillez entrer sa description (optionnel) :</string>
    <string name="search_designation_uv_title">Veuillez entrer son designation (optionnel) :</string>
    <string name="search_button_title">Rechercher</string>
    <string name="search_uv_code_required">Code Uv nécessaire</string>
    <string name="search_uv_code_unknow">Uv inconnue</string>

    <!-- SearchResult -->
    <string name="no_uvs_search">Aucune UV trouvée. Faites une nouvelle recherche !</string>
    <string name="search_result_title">Résultats de votre recherche :</string>

</resources>
