<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	 
	android:orientation="vertical"
 
	tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_utt"
        android:src="@drawable/background" />
    
    <LinearLayout 
        android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingLeft="@dimen/login_horizontal_margin"
		android:paddingRight="@dimen/login_horizontal_margin"
		android:paddingBottom="@dimen/login_vertical_margin"
		android:orientation="vertical" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="@color/identification_background"
	        android:gravity="center"
	        android:text="@string/title_activity_login"
	        android:textSize="20sp"
	        android:textColor="@color/identification_text" />
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20sp"
	        android:text="@string/login"
	        android:textColor="@color/name_bar_background" />
		 
		<EditText
		    android:id="@+id/login"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text" >
	    </EditText>
	    
		<TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20sp"
	        android:text="@string/password"
	        android:textColor="@color/name_bar_background" />
	    
		<EditText
		    android:id="@+id/password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword" />
	
		<Button
		    android:id="@+id/connect_button"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginTop="40sp"
		    android:background="@drawable/roundbutton"
		    android:text="@string/connect"
		    android:textColor="@color/identification_text" />
	
	    <Button
	        android:id="@+id/toRegister_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dip"
	        android:background="@null"
	        android:text="@string/no_account"
	        android:textColor="#21dbd4"
	        android:textStyle="bold" />
    
    </LinearLayout>

</LinearLayout>