<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Method 1 : by uv code prediction -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/search_method1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_method1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/search_code_uv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_code_uv_title" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8" >
            </AutoCompleteTextView>
        </LinearLayout>

        <Button
            android:id="@+id/search_button_method1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/search_button_title" />
    </LinearLayout>
    <!-- End of Method 1 -->


    <!-- Method 2 : by giving other informations -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/search_method2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_method2" />

        <TextView
            android:id="@+id/search_categorie_uv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_categorie_uv_title" />

        <ListView
            android:id="@+id/uvs_ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <TextView
            android:id="@+id/search_designation_uv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_designation_uv_title" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/search_description_uv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_description_uv_title" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="text" >
        </EditText>

        <Button
            android:id="@+id/search_button_method2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/search_button_title" />
    </LinearLayout>

    <!-- End of Method 2 -->

</LinearLayout>