<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UvActivity" >

    <TextView 
		android:id="@+id/name_uv_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:textStyle="bold"
		android:textIsSelectable="false"
		android:textColor="@android:color/white"
		android:maxLines="2"
		android:ellipsize="end"
		android:padding="2dp"
		android:background="@color/name_bar_background" />
    
    <LinearLayout   
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    
	    android:orientation="vertical"
	    
	    android:paddingLeft="@dimen/uv_description_horizontal_margin"
		android:paddingRight="@dimen/uv_description_horizontal_margin"
		android:paddingTop="@dimen/uv_description_vertical_margin"
		android:paddingBottom="@dimen/uv_description_vertical_margin" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/uv_description_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/name_bar_background"
	        android:text="@string/uv_description_title" />
	    
	    <TextView
	        android:id="@+id/uv_description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
		        <TextView
			        android:id="@+id/credit_uv_title"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/name_bar_background"
			        android:text="@string/credit_uv_title" />
		    
			    <TextView
			        android:id="@+id/credit_uv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" />
			    
	    </LinearLayout>
	    
    
	   
	    <TextView
	        android:id="@+id/note_uv_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/name_bar_background"
	        android:text="@string/note_uv" />
		
	    <RatingBar
	        android:id="@+id/ratingBar_current_note"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:isIndicator="true"
	        android:numStars="5"
	        android:stepSize="0.1" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/add_comment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_comment" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/name_bar_background"
        android:paddingBottom="@dimen/uv_description_vertical_margin"
        android:paddingLeft="@dimen/uv_description_horizontal_margin"
        android:paddingRight="@dimen/uv_description_horizontal_margin"
        android:paddingTop="@dimen/uv_description_vertical_margin"
        android:text="@string/all_comments"
        android:textSize="15sp" />

</LinearLayout>